<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ROOM_ACTIVITY">

    <TextView
        android:id="@+id/room_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_stirng"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="22sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/room_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_string"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/room_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/save_data_string"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/room_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/edit_stirng"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/room_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/Delete_stirng"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/room_delete_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/Deleteall_stirng"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

</LinearLayout>